--- a/Krachtlijnen.html
+++ b/Krachtlijnen.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple mobile web page maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header2-22" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">free mobile web site creator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header2-22" style="background-color: rgb(239, 239, 239);">
 
     
 
