--- a/Onderzoek.html
+++ b/Onderzoek.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">html website generator software download</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-1q" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">best offline web site development software download</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-1q" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -158,7 +158,7 @@
                                 <p>Aan de hand van de portretten gaan we de krachtlijnen eruit halen en deze krachtlijnen worden omgezet in 3D door middel van plooien of andere technieken. Zie krachtlijnen om ons proces te volgen.<br></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="https://mobirise.com">KRACHTLIJNEN</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="Krachtlijnen.html">KRACHTLIJNEN</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top col-md-7">
