--- a/Context.html
+++ b/Context.html
@@ -37,7 +37,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="Context.html">CONTEXT</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Analyse.html" data-toggle="dropdown-submenu" aria-expanded="false">ONDERZOEK</a><div class="dropdown-menu"><a class="dropdown-item" href="Onderzoek.html">GEZICHTSUITDRUKKINGEN</a><a class="dropdown-item" href="Krachtlijnen.html">KRACHTLIJNEN</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="Over ons.html" data-toggle="dropdown-submenu" aria-expanded="true">OVER ONS</a><div class="dropdown-menu"><a class="dropdown-item" href="Ons team.html">ONS TEAM</a><a class="dropdown-item" href="Wie is wie?.html">WIE IS WIE?</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html">HELP</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="Context.html">CONTEXT</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Analyse.html" data-toggle="dropdown-submenu" aria-expanded="false">ONDERZOEK</a><div class="dropdown-menu"><a class="dropdown-item" href="Onderzoek.html">GEZICHTSUITDRUKKINGEN</a><a class="dropdown-item" href="Krachtlijnen.html">KRACHTLIJNEN</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Over ons.html" data-toggle="dropdown-submenu" aria-expanded="false">OVER ONS</a><div class="dropdown-menu"><a class="dropdown-item" href="Ons team.html">ONS TEAM</a><a class="dropdown-item" href="Wie is wie.html">WIE IS WIE?</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html">HELP</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg web maker software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header2-1x" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg web site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header2-1x" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -66,7 +66,7 @@
 
                         <div class="mbr-table-cell mbr-right-padding-md-up col-md-5 text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2"><br><br><span style="font-size: 3rem; line-height: 1.1;">CROSS OVER</span><br></h3>
+                            <h3 class="mbr-section-title display-2"><span style="font-size: 3rem; line-height: 1.1;">CROSS OVER</span><span style="font-size: 3rem; line-height: 1.1;">&nbsp;</span><br><span style="font-size: 3rem; line-height: 1.1;">ZELFPORTRET DIRK BRAECKMAN</span></h3>
 
                             <div class="mbr-section-text lead">
                                 <p>De visie in de tentoonstelling dat in het museum liep sprak ons aan, doordat fotografie en beeldhouwkusnt werden gekoppeld aan elkaar. Ondanks dat we er bewust voor hebben gekozen, beseffen we ook dat dit een niet directe cross over is. De diepliggende betekenis sprak ons volledig aan en door de visie achter deze foto vonden we dat dit ook gebruikt kon worden als cross over.<br><br>Afbeelding: ''zelfportret nr 35''<br>- Dirk Braeckman</p>
@@ -106,7 +106,7 @@
 
                         <div class="mbr-table-cell mbr-right-padding-md-up col-md-5 text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">CROSS OVER</h3>
+                            <h3 class="mbr-section-title display-2">CROSS OVER<br>VISIE <br>ELLEN PIL</h3>
 
                             <div class="mbr-section-text lead">
                                 <p>De visie van Ellen Pil sprak ons aan, door het gebruik en experimenteren van 2D en 3D in haar werken. Ze werkt steeds in conflict met haar zelf, maar probeert dit wel harmonieus op te lossen. Ze communiceert 3D objecten vanuit een 2D beeld (vb. helmen). Deze methode zien we niet direct tot een concreet ontwerp, maar een methode dat een interessant ontwerpproces kan leveren. Door bijvoorbeeld een interessant patroon in 2D te ontwerpen en dit over te brengen tot een 3D gegeven, te extruderen of op te bouwen. Het lijkt ons vooral interessant om eens vanuit 2D te vertrekken in plaats van direct driedimensioneel te gaan denken, zoals bij het maken van proefmaquettes, ontwerpschetsen,.... Zo kunnen we bijvoorbeeld vertrekken vanuit een patroon en met deze vlakken tot een driedimensioneel object uitkomen. Bij dat patroon ga je niet direct een object zien maar eerder simpele vlakken, waardoor dit een bevreemde indruk geeft. Bij Renato Nicolodi zie je ook niet direct duidelijk wat zijn objecten moeten voorstellen, doordat er geen schaal gebruikt word. Rond deze bevreemde indruk willen we dan ook mee verder werken in het lopende ontwerpproces (surrealisme).<br><br>Afbeelding: ''Marie Eijkmans<br>- Ellen Pil</p>
@@ -236,7 +236,7 @@
             <div class="row">
                 <div class="mbr-section col-md-10">
 
-                    <h1 class="mbr-section-title display-1">BESLUIT <br><br></h1>
+                    <h1 class="mbr-section-title display-1">BESLUIT <br></h1>
                     <p class="mbr-section-lead lead"><span style="font-style: normal;">Zowel de visie van Ellen Pil als het zelfportret van Dirk Braeckman is 2D, maar ze zijn allebei
 gelinkt aan 3D. Er zijn veel contrasten terug te zien in hun werken en ze gebruiken allebei
 meerdere perspectieven. In hun werken vinden wij dat er een zekere vorm van surrealisme en mysterie te zien is. Op het eerste zicht zien de werken er abstract uit, maar toen wij de dieper liggende betekenissen gingen onderzoeken kwamen wij erachter dat ze naar meer verwezen dan enkel zichzelf.
