--- a/Onderzoek.html
+++ b/Onderzoek.html
@@ -37,7 +37,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="Context.html">CONTEXT</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Analyse.html" data-toggle="dropdown-submenu" aria-expanded="false">ONDERZOEK</a><div class="dropdown-menu"><a class="dropdown-item" href="Onderzoek.html">GEZICHTSUITDRUKKINGEN</a><a class="dropdown-item" href="Krachtlijnen.html">KRACHTLIJNEN</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="Over ons.html" data-toggle="dropdown-submenu" aria-expanded="true">OVER ONS</a><div class="dropdown-menu"><a class="dropdown-item" href="Ons team.html">ONS TEAM</a><a class="dropdown-item" href="Wie is wie?.html">WIE IS WIE?</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html">HELP</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="Context.html">CONTEXT</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Analyse.html" data-toggle="dropdown-submenu" aria-expanded="false">ONDERZOEK</a><div class="dropdown-menu"><a class="dropdown-item" href="Onderzoek.html">GEZICHTSUITDRUKKINGEN</a><a class="dropdown-item" href="Krachtlijnen.html">KRACHTLIJNEN</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Over ons.html" data-toggle="dropdown-submenu" aria-expanded="false">OVER ONS</a><div class="dropdown-menu"><a class="dropdown-item" href="Ons team.html">ONS TEAM</a><a class="dropdown-item" href="Wie is wie.html">WIE IS WIE?</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html">HELP</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best offline web site development software download</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-1q" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">top mobile website generator</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-1q" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -152,7 +152,7 @@
 
                         <div class="mbr-table-cell mbr-right-padding-md-up col-md-5 text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">GEZICHTSUITDRUKKINGEN</h3>
+                            <h3 class="mbr-section-title display-2">GEZICHTS<br>UITDRUKKINGEN</h3>
 
                             <div class="mbr-section-text lead">
                                 <p>Aan de hand van de portretten gaan we de krachtlijnen eruit halen en deze krachtlijnen worden omgezet in 3D door middel van plooien of andere technieken. Zie krachtlijnen om ons proces te volgen.<br></p>
