--- a/Wie is wie.html
+++ b/Wie is wie.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-87955573-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="ext_menu-1m">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -37,7 +52,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="Context.html">CONTEXT</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Analyse.html" data-toggle="dropdown-submenu" aria-expanded="false">ONDERZOEK</a><div class="dropdown-menu"><a class="dropdown-item" href="Onderzoek.html">GEZICHTSUITDRUKKINGEN</a><a class="dropdown-item" href="Krachtlijnen.html">KRACHTLIJNEN</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Over ons.html" data-toggle="dropdown-submenu" aria-expanded="false">OVER ONS</a><div class="dropdown-menu"><a class="dropdown-item" href="Ons team.html">ONS TEAM</a><a class="dropdown-item" href="Wie is wie.html">WIE IS WIE?</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html">HELP</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="Context.html">CONTEXT</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Analyse.html" data-toggle="dropdown-submenu" aria-expanded="false">ONDERZOEK</a><div class="dropdown-menu"><a class="dropdown-item" href="Onderzoek.html">GEZICHTSUITDRUKKINGEN</a><a class="dropdown-item" href="Krachtlijnen.html">KRACHTLIJNEN</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Over ons.html" data-toggle="dropdown-submenu" aria-expanded="false">OVER ONS</a><div class="dropdown-menu"><a class="dropdown-item" href="Ons team.html">ONS TEAM</a><a class="dropdown-item" href="Wie is wie.html">WIE IS WIE?</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -50,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top web site building software</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-1n" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">top responsive web page builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-1n" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -106,11 +121,14 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
   <script src="assets/viewportChecker/jquery.viewportchecker.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchSwipe/jquery.touchSwipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
   <input name="animation" type="hidden">
+  <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
