--- a/Onderzoek.html
+++ b/Onderzoek.html
@@ -52,7 +52,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="Context.html">CONTEXT</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="Analyse.html" data-toggle="dropdown-submenu" aria-expanded="true">ONDERZOEK</a><div class="dropdown-menu"><a class="dropdown-item" href="Onderzoek.html">GEZICHTSUITDRUKKINGEN</a></div></li><li class="nav-item"><a class="nav-link link" href="Analyse.html" aria-expanded="false">EINDRESULTAAT</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Over ons.html" data-toggle="dropdown-submenu" aria-expanded="false">OVER ONS</a><div class="dropdown-menu"><a class="dropdown-item" href="Ons team.html">ONS TEAM</a><a class="dropdown-item" href="Wie is wie.html">WIE IS WIE?</a></div></li><li class="nav-item"><a class="nav-link link" href="Over ons.html" aria-expanded="false">PRIVACY</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="Context.html">CONTEXT</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Analyse.html" data-toggle="dropdown-submenu" aria-expanded="false">ONDERZOEK</a><div class="dropdown-menu"><a class="dropdown-item" href="Onderzoek.html">GEZICHTSUITDRUKKINGEN</a></div></li><li class="nav-item"><a class="nav-link link" href="Analyse.html" aria-expanded="false">EINDRESULTAAT</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="Over ons.html" data-toggle="dropdown-submenu" aria-expanded="false">OVER ONS</a><div class="dropdown-menu"><a class="dropdown-item" href="Ons team.html">ONS TEAM</a><a class="dropdown-item" href="Wie is wie.html">WIE IS WIE?</a></div></li><li class="nav-item"><a class="nav-link link" href="Over ons.html" aria-expanded="false">PRIVACY</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -65,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">offline website builder software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header2-1r" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg web page design</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header2-1r" style="background-color: rgb(239, 239, 239);">
 
     
 
