--- a/Ontwerpproces iconen.html
+++ b/Ontwerpproces iconen.html
@@ -67,7 +67,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy wysiwyg web page maker software</a></section><section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box1-77" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy wysiwyg web builder</a></section><section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box1-77" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 90px;">
 
     
     <div class="container">
