--- a/Prototype.html
+++ b/Prototype.html
@@ -65,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop web design</a></section><section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box1-8l" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy web page creator</a></section><section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box1-8l" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 90px;">
 
     
     <div class="container">
