--- a/Resultaat.html
+++ b/Resultaat.html
@@ -65,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobile web generator software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-9w" style="background-color: rgb(239, 239, 239); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobile web builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-9w" style="background-color: rgb(239, 239, 239); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
