--- a/Verleiding.html
+++ b/Verleiding.html
@@ -65,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free website generator</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-6t" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free mobile site development software</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-6t" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
